# logging

./: .appveyor.yml  .build_conf  .clang-format  .clang_complete  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.rst  include_files.cmake  src_files.cmake
examples/: CMakeLists.txt  logging.cpp
include/ext/: logging.hpp
include/ext/logging/: definitions.hpp  functionality.hpp
src/: logging.cpp
tests/: CMakeLists.txt  logging.cpp
